// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manual Case Offence Component should compile correctly and render the page 1`] = `
<ng-component
  alcoholLevelMethods={[Function Array]}
  hasNpp="false"
  manualCaseDefendants={[Function Array]}
  manualCaseType=""
  offenceDateCodes={[Function Array]}
  onSubmitFormData={[Function Function]}
>
  <manual-case-offence>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-full"
        full=""
      >
        <h1
          class="govuk-heading-xl"
          pdk-typography="heading-xlarge"
        >
           MANUAL_CASE_OFFENCE.TITLE 
        </h1>
      </pdk-grid>
    </pdk-grid>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-full"
        full=""
      >
        <h2
          class="govuk-!-margin-top-3 govuk-!-margin-bottom-3 govuk-heading-m"
          pdk-margin-vertical="3"
          pdk-typography="heading-medium"
        >
           MANUAL_CASE_OFFENCE.OFFENCE_NO  
        </h2>
      </pdk-grid>
    </pdk-grid>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-full"
        full=""
      >
        <form
          class="ng-untouched ng-pristine ng-valid"
          novalidate=""
          pdk-form=""
        >
          <pdk-form-field
            labeltype="small"
            style="width: 50%;"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   CASE_DETAILS.OFFENCE.HISTORICAL_OFFENCES_ONLY 
                </legend>
                <pdk-hint
                  class="govuk-hint"
                >
                  <div>
                     CASE_DETAILS.OFFENCE.HISTORICAL_DATE_HINT 
                  </div>
                </pdk-hint>
                <pdk-date-input
                  class="ng-untouched ng-pristine ng-valid"
                  name="offenceSearchDate"
                >
                  <pdk-interaction-container>
                    <div>
                      <div
                        class="pdk-date-input"
                      >
                        <div
                          class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                        >
                          <div
                            class="govuk-date-input__item"
                          >
                            <label
                              class="govuk-date-input__label govuk-label"
                              for="pdk-date-input-GENERATED_ID-day"
                              pdk-label=""
                            >
                               Day 
                            </label>
                            <input
                              autocomplete="off"
                              class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                              formcontrolname="day"
                              id="pdk-date-input-GENERATED_ID-day"
                              name="dateDay"
                              required=""
                              type="number"
                            />
                          </div>
                          <div
                            class="govuk-date-input__item"
                          >
                            <label
                              class="govuk-date-input__label govuk-label"
                              for="pdk-date-input-GENERATED_ID-month"
                              pdk-label=""
                            >
                               Month 
                            </label>
                            <input
                              autocomplete="off"
                              class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                              formcontrolname="month"
                              id="pdk-date-input-GENERATED_ID-month"
                              name="dateMonth"
                              required=""
                              type="number"
                            />
                          </div>
                          <div
                            class="govuk-date-input__item"
                          >
                            <label
                              class="govuk-date-input__label govuk-label"
                              for="pdk-date-input-GENERATED_ID-year"
                              pdk-label=""
                            >
                               Year 
                            </label>
                            <input
                              autocomplete="off"
                              class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                              formcontrolname="year"
                              id="pdk-date-input-GENERATED_ID-year"
                              name="dateYear"
                              required=""
                              type="number"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </pdk-interaction-container>
                </pdk-date-input>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-field
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <label
                class="govuk-label govuk-label--s"
                for="pdk-form-control-undefined-GENERATED_ID"
              >
                 CASE_DETAILS.OFFENCE.ENTER_OFFENCE_CODE 
              </label>
              <offence-search
                class="ng-untouched ng-pristine ng-valid"
                name="offenceCode"
                ngmodel=""
              >
                <div
                  id="offence-search"
                >
                  <div>
                    Selected Offence Code: "RT88584B"
                  </div>
                  <div>
                    Offence Date: 
                  </div>
                </div>
              </offence-search>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-inset-text>
            <div
              class="govuk-inset-text"
            >
              <p>
                <span
                  class="pdk-!-text-color-dark-grey govuk-body-m"
                  pdk-text-colour="dark-grey"
                  pdk-typography="body"
                >
                  RT88584B
                </span>
              </p>
              <p>
                <span
                  class="bold govuk-body-m"
                  pdk-typography="body-medium"
                >
                </span>
              </p>
              <p>
                <span
                  class="pdk-!-text-color-dark-grey govuk-body-m"
                  pdk-text-colour="dark-grey"
                  pdk-typography="body"
                >
                </span>
              </p>
            </div>
          </pdk-inset-text>
          <dynamic-particular-form
            class="ng-untouched ng-pristine ng-valid"
            name="dynamicParticularFormData"
          >
            <div
              id="dynamic-particular-form"
            >
              <div>
                Offence Date Types: [
    {
      "value": "1",
      "label": "before"
    },
    {
      "value": "2",
      "label": "after"
    },
    {
      "value": "4",
      "label": "between"
    }
  ]
              </div>
              <div>
                Offence Wording: "Caught Driving On Phone"
              </div>
              <div>
                Arrest Date Value: 
              </div>
              <div>
                Form Data: 
              </div>
            </div>
          </dynamic-particular-form>
          <pdk-form-group
            class="pdk-form-group"
          >
            <button
              class="govuk-button"
              data-role="continue"
              pdk-button=""
              type="submit"
            >
               MANUAL_CASE_OFFENCE.CONTINUE 
            </button>
          </pdk-form-group>
          <p
            class="govuk-!-margin-top-3"
            pdk-margin-top="3"
          >
            <a
              class="govuk-link govuk-link--no-visited-state"
              href="javascript:void(0)"
              pdk-link=""
              unvisited=""
            >
               MANUAL_CASE_OFFENCE.BACK 
            </a>
          </p>
        </form>
      </pdk-grid>
    </pdk-grid>
  </manual-case-offence>
</ng-component>
`;

exports[`Manual Case Offence Component should compile correctly if AOCP eligible offence 1`] = `
<ng-component
  alcoholLevelMethods={[Function Array]}
  hasNpp="false"
  manualCaseDefendants={[Function Array]}
  manualCaseType=""
  offenceDateCodes={[Function Array]}
  onSubmitFormData={[Function Function]}
>
  <manual-case-offence>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-full"
        full=""
      >
        <h1
          class="govuk-heading-xl"
          pdk-typography="heading-xlarge"
        >
           MANUAL_CASE_OFFENCE.TITLE 
        </h1>
      </pdk-grid>
    </pdk-grid>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-full"
        full=""
      >
        <h2
          class="govuk-!-margin-top-3 govuk-!-margin-bottom-3 govuk-heading-m"
          pdk-margin-vertical="3"
          pdk-typography="heading-medium"
        >
           MANUAL_CASE_OFFENCE.OFFENCE_NO  
        </h2>
      </pdk-grid>
    </pdk-grid>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-full"
        full=""
      >
        <form
          class="ng-untouched ng-valid ng-dirty"
          novalidate=""
          pdk-form=""
        >
          <pdk-form-field
            labeltype="small"
            style="width: 50%;"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   CASE_DETAILS.OFFENCE.HISTORICAL_OFFENCES_ONLY 
                </legend>
                <pdk-hint
                  class="govuk-hint"
                >
                  <div>
                     CASE_DETAILS.OFFENCE.HISTORICAL_DATE_HINT 
                  </div>
                </pdk-hint>
                <pdk-date-input
                  class="ng-untouched ng-pristine ng-valid"
                  name="offenceSearchDate"
                >
                  <pdk-interaction-container>
                    <div>
                      <div
                        class="pdk-date-input"
                      >
                        <div
                          class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                        >
                          <div
                            class="govuk-date-input__item"
                          >
                            <label
                              class="govuk-date-input__label govuk-label"
                              for="pdk-date-input-GENERATED_ID-day"
                              pdk-label=""
                            >
                               Day 
                            </label>
                            <input
                              autocomplete="off"
                              class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                              formcontrolname="day"
                              id="pdk-date-input-GENERATED_ID-day"
                              name="dateDay"
                              required=""
                              type="number"
                            />
                          </div>
                          <div
                            class="govuk-date-input__item"
                          >
                            <label
                              class="govuk-date-input__label govuk-label"
                              for="pdk-date-input-GENERATED_ID-month"
                              pdk-label=""
                            >
                               Month 
                            </label>
                            <input
                              autocomplete="off"
                              class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                              formcontrolname="month"
                              id="pdk-date-input-GENERATED_ID-month"
                              name="dateMonth"
                              required=""
                              type="number"
                            />
                          </div>
                          <div
                            class="govuk-date-input__item"
                          >
                            <label
                              class="govuk-date-input__label govuk-label"
                              for="pdk-date-input-GENERATED_ID-year"
                              pdk-label=""
                            >
                               Year 
                            </label>
                            <input
                              autocomplete="off"
                              class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                              formcontrolname="year"
                              id="pdk-date-input-GENERATED_ID-year"
                              name="dateYear"
                              required=""
                              type="number"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </pdk-interaction-container>
                </pdk-date-input>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-field
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <label
                class="govuk-label govuk-label--s"
                for="pdk-form-control-undefined-GENERATED_ID"
              >
                 CASE_DETAILS.OFFENCE.ENTER_OFFENCE_CODE 
              </label>
              <offence-search
                class="ng-untouched ng-valid ng-dirty"
                name="offenceCode"
                ngmodel=""
              >
                <div
                  id="offence-search"
                >
                  <div>
                    Selected Offence Code: "RT88584B"
                  </div>
                  <div>
                    Offence Date: ""
                  </div>
                </div>
              </offence-search>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-inset-text>
            <div
              class="govuk-inset-text"
            >
              <p>
                <span
                  class="pdk-!-text-color-dark-grey govuk-body-m"
                  pdk-text-colour="dark-grey"
                  pdk-typography="body"
                >
                  RT88584B
                </span>
              </p>
              <p>
                <span
                  class="bold govuk-body-m"
                  pdk-typography="body-medium"
                >
                </span>
              </p>
              <p>
                <span
                  class="pdk-!-text-color-dark-grey govuk-body-m"
                  pdk-text-colour="dark-grey"
                  pdk-typography="body"
                >
                </span>
              </p>
            </div>
          </pdk-inset-text>
          <dynamic-particular-form
            class="ng-untouched ng-pristine ng-valid"
            name="dynamicParticularFormData"
          >
            <div
              id="dynamic-particular-form"
            >
              <div>
                Offence Date Types: [
    {
      "value": "1",
      "label": "before"
    },
    {
      "value": "2",
      "label": "after"
    },
    {
      "value": "4",
      "label": "between"
    }
  ]
              </div>
              <div>
                Offence Wording: "Caught Driving On Phone"
              </div>
              <div>
                Arrest Date Value: 
              </div>
              <div>
                Form Data: 
              </div>
            </div>
          </dynamic-particular-form>
          <pdk-form-field
            class="govuk-!-margin-top-2"
            label="Can the defendant be offered an online conviction and plenalty?"
            labeltype="small"
            pdk-margin-top="2"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   Can the defendant be offered an online conviction and plenalty? 
                </legend>
                <pdk-radio-group
                  class="ng-untouched ng-pristine ng-valid"
                  data-role="prosecutorOfferAOCP"
                  name="prosecutorOfferAOCP"
                  required=""
                >
                  <div
                    class="govuk-radios"
                  >
                    <pdk-radio-button>
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          id="pdk-radio-GENERATED_ID"
                          name="pdk-radio-group-GENERATED_ID"
                          type="radio"
                          value="true"
                        />
                        <label
                          class="govuk-radios__label govuk-label"
                          for="pdk-radio-GENERATED_ID"
                          pdk-label=""
                        >
                           COMMON.YES 
                        </label>
                      </div>
                    </pdk-radio-button>
                    <pdk-radio-button>
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          id="pdk-radio-GENERATED_ID"
                          name="pdk-radio-group-GENERATED_ID"
                          type="radio"
                          value="false"
                        />
                        <label
                          class="govuk-radios__label govuk-label"
                          for="pdk-radio-GENERATED_ID"
                          pdk-label=""
                        >
                           COMMON.NO 
                        </label>
                      </div>
                    </pdk-radio-button>
                  </div>
                </pdk-radio-group>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-group
            class="pdk-form-group"
          >
            <button
              class="govuk-button"
              data-role="continue"
              pdk-button=""
              type="submit"
            >
               MANUAL_CASE_OFFENCE.CONTINUE 
            </button>
          </pdk-form-group>
          <p
            class="govuk-!-margin-top-3"
            pdk-margin-top="3"
          >
            <a
              class="govuk-link govuk-link--no-visited-state"
              href="javascript:void(0)"
              pdk-link=""
              unvisited=""
            >
               MANUAL_CASE_OFFENCE.BACK 
            </a>
          </p>
        </form>
      </pdk-grid>
    </pdk-grid>
  </manual-case-offence>
</ng-component>
`;

exports[`Manual Case Offence Component should trigger submitFormData when the ADD button is pressed and stay on the current page 1`] = `
{
  "defendantOptions": [],
}
`;
